--- a/Animated Image Gallery/style.css
+++ b/Animated Image Gallery/style.css
@@ -14,6 +14,17 @@ body {
   background-color: #151f28;
 }
 
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  filter: grayscale(100%);
+  font-size: 2.5rem;
+}
+
 .container {
   width: 70%;
   max-width: 800px;
