--- a/Animated Image Gallery/style.css
+++ b/Animated Image Gallery/style.css
@@ -9,6 +9,7 @@
 body {
   height: 100vh;
   display: flex;
+/*   flex-direction: column; */
   justify-content: center;
   align-items: center;
   background-color: #151f28;
@@ -20,10 +21,11 @@ body {
   align-items: center;
 }
 
-h1 {
+/* h1 {
   filter: grayscale(100%);
   font-size: 2.5rem;
-}
+  font-
+} */
 
 .container {
   width: 70%;
